--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ header .menu {
   gap: 5px;
 
 }
+
 #buscar {
   height: 30px;
   width: 100%;
@@ -68,6 +69,7 @@ header .menu {
   border-radius: 0.3125rem 0rem 0rem 0.3125rem;
   border: 0.5px solid #d9d9d9;
 }
+
 #buscar:focus{
 
   border: 1.1px solid var(--colorgreen--);
@@ -131,8 +133,8 @@ section .containerProducts {
 .headerCard:hover::before,
 .headerCard:hover::after {
   transform: translateY(-80%);
-  opacity: 0.2;
-  transition-delay: 1s;
+  opacity: 0.9;
+  transition-delay: .8s;
 }
 
 .headerCard .description {
@@ -146,8 +148,9 @@ section .containerProducts {
 
   padding: 10px;
   opacity: 0;
-  transition: 5s ease;
+  /* transition: 5s ease; */
 }
+
 .headerCard .description h6,
 .headerCard .description ul {
   visibility: hidden;
@@ -207,7 +210,7 @@ section .containerProducts {
   font-weight: bold;
   font-size: 1.2rem;
   color: #fff;
-
+  margin-bottom: 10px;
   border: none;
   border-radius: 15px;
   background-color: #5ca720;
@@ -254,7 +257,7 @@ footer {
 .newsletter {
   width: 30%;
 
-
+  
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -273,7 +276,10 @@ footer {
 .controlInput input {
   width: 70%;
   outline: none;
+
   font-size: 1.1rem;
+  font-weight: bold;
+
   background-color: #fff;
   border-radius: 0.3125rem 0rem 0rem 0.3125rem;
   border: 0.5px solid #d9d9d9;
@@ -281,7 +287,7 @@ footer {
 .controlInput input::placeholder {
   color: var(--clrgray--);
   padding-left: 5px;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 .controlInput input:focus {
   border: 1px solid var(--colorgreen--);
@@ -324,22 +330,23 @@ footer {
 
 /* Responsividade */
 @media only screen and (min-width: 320px) and (max-width: 680px) {
-  header .menu {
-    /* border: 2px solid black; */
-  }
 
   .menu .btnNav {
     margin-right: 0;
     width: 65%;
     justify-content: center;
-    gap: 50px;
+    gap: 30px;
 
   }
+
   #buscar{
+
     width: 100%;
+    font-size: .9rem;
   }
 
   .containerTextAndNew{
+    width: 90%;
     flex-direction: column;
     align-items: start;
   }
@@ -348,7 +355,7 @@ footer {
     margin-left: 30px;
   }
   .controlInput{
-    width: 90%;
+    width: 100%;
     flex-direction: column;
 
   }
@@ -360,5 +367,75 @@ footer {
   .controlInput #inscrever{
     width: 100%;
     margin-bottom: 30px;
+  }
+  .containerSocialPay{
+    width: 100%;
+  }
+  .paymentsFooter {
+
+    display: flex;
+    margin: 0px 20px;
+
+  }
+  .paymentsFooter img{
+
+    width: 100%;
+  }
+  .socialFooter img{
+    margin-top: 10px;
+  }
+}
+
+@media only screen and (min-width: 681px) and (max-width: 920px){
+
+  .menu .btnNav{
+    width: 50%;
+
+  }
+  .containerTextAndNew{
+  flex-direction: column;
+  align-items: flex-start;
+  }
+  .newsletter{
+    width: 80%;
+
+    margin-left: 30px;
+    margin-bottom: 20px;
+  }
+  .controlInput{
+    width: 80%;
+
+    flex-direction: column;
+  }
+  .controlInput input{
+    width: 100%;
+    height: 40px;
+  }
+  .controlInput #inscrever{
+    width: 100%;
+    margin-block: 20px;
+  }
+}
+
+@media only screen and (min-width: 921px) and (max-width:1280px){
+  .menu .btnNav{
+    width: 45%;
+    
+  }
+  .newsletter{
+
+    margin-right: 30px;
+  }
+  .controlInput{
+    flex-direction: column;
+    width: 100%;
+  }
+  .controlInput input{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 11px;
+  }
+  .controlInput #inscrever{
+    width: 70%;
   }
 }
