--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header .menu {
   width: 100%;
   transition: 0.3s linear;
 }
+
 .menu.fixednav {
   position: fixed;
   background-color: #fff;
@@ -39,6 +40,7 @@ header .menu {
   height: 50px;
   z-index: 1;
 }
+
 .menu a {
   margin-left: 30px;
 }
@@ -184,7 +186,7 @@ section .containerProducts {
   opacity: 1;
 }
 
-.boxProducts h4 {
+.boxProducts p {
   margin-top: 10px;
   font-size: 1.4rem;
   font-weight: 500;
