--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ section .containerProducts {
 }
 
 .headerCard .description h6,
-.headerCard .description ul {
+.headerCard .description p {
   visibility: hidden;
   opacity: 0;
 }
@@ -182,6 +182,7 @@ section .containerProducts {
   visibility: visible;
   bottom: 240px;
   color: #000;
+  font-size: 1rem;
   text-align: justify;
   opacity: 1;
 }
