--- a/modal.css
+++ b/modal.css
@@ -1,101 +1,150 @@
 .modal {
-    width: 100%;
-    height: 100vh;
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
+  width: 100%;
+  height: 100vh;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
 
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.6);
 
-    justify-content: center;
-    align-items: center;
-
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-content {
-    position: relative;
-    background-color: #fefefe;
-    width: 30%;
-    height: 50vh;
+  position: relative;
+  background-color: #fefefe;
+  width: 30%;
+  height: 50vh;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 .close {
-    position: absolute;
-    top: -50px;
-    right: -15px;
+  position: absolute;
+  top: -50px;
+  right: -15px;
 
-    font-weight: bold;
-    cursor: pointer;
-    color: #000;
-    font-size: 2.8rem;
-
+  font-weight: bold;
+  cursor: pointer;
+  color: #000;
+  font-size: 2.8rem;
 }
 
 #formModal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    width: 50%;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  width: 50%;
 }
-.inputFormControl{
-    width: 90%;
-    
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.inputFormControl {
+  width: 90%;
 
-    border: 0.8px solid #000;
-    border-radius: 3px;
-    background-color: #cdcd;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
+  border: 0.8px solid #000;
+  border-radius: 3px;
+  background-color: #cdcd;
 }
-.inputFormControl i{
-    color: black;
-    flex: 1;
-    font-size: 1.2rem;
+.inputFormControl i {
+  color: black;
+  flex: 1;
+  font-size: 1.2rem;
 }
-.inputFormControl input{
-    width: 90%;
-    height: 40px;
+.inputFormControl input {
+  width: 90%;
+  height: 40px;
 
-    font-size: 1rem;
-    padding-left: 5px;
-    outline: none;
-    border: none;
+  font-size: 1rem;
+  padding-left: 5px;
+  outline: none;
+  border: none;
 }
-#formModal input::placeholder{
-    color: #000;
-    font-size: 1rem;
-    font-weight: 500;
+#formModal input::placeholder {
+  color: #000;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 #btnLoginModal {
-    width: 125px;
-    cursor: pointer;
+  width: 125px;
+  cursor: pointer;
 
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    margin-top: 15px;
-    font-size: 1.1rem;
+  padding: 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  margin-top: 15px;
+  font-size: 1.1rem;
 }
 
 #btnLoginModal:hover {
-    background-color: #45a049;
+  background-color: #45a049;
+}
+
+.recuperarSenha {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  margin-top: 10px;
+}
+#formModal a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 500;
+}
+
+
+/* Responsivo */
+
+/* @media only screen and (max-width: 320px){
+
+    .modal-content{
+        width: 90%;
+    }
+    #formModal{
+        width: 100%;
+    }
+} */
+
+
+@media only screen and (max-width: 720px){
+
+    .modal-content{
+        width: 80%;
+    }
+ 
+}
+
+@media only screen and (max-width: 980px){
+
+    .modal-content{
+        width: 80%;
+    }
+    #formModal{
+        width: 50%;
+    }
+}
+@media only screen and (min-width: 981px) and (max-width: 1820px){
+
+    .modal-content{
+        width: 50%;
+    }
+    #formModal{
+        width: 50%;
+    }
 }
